[tool.poetry]
name = "streamlit-secure-data-encryption-system"
version = "0.1.0"
description = "A secure data encryption system"
authors = ["Aliyan Jabbar <jabbaraliyan805@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7"
streamlit = "^1.22.0"
cryptography = "^39.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
